registration form DONE

--- a/app/SeqMine/src/app/components/home/home.component.html
+++ b/app/SeqMine/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
     <div class="col-5">
       <h1>Welcome to SeqMine</h1>
 
-      ><img src="/assets/images/home-page-logo.png" />
-      <p>Store your sequence data with SeqMine!</p>
+      <img src="/assets/images/home-page-logo.png" />
+      <h5>Store your sequence data with SeqMine!</h5>
     </div>
   </div>
 </div>
