--- a/app/SeqMine/src/app/app.component.html
+++ b/app/SeqMine/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<div class="page-body-content">
+    <router-outlet></router-outlet>
+</div>
 
 <app-footer></app-footer>
