--- a/app/SeqMine/src/app/components/login/login.component.html
+++ b/app/SeqMine/src/app/components/login/login.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="!this.isLoggedIn" class="container">
   <fieldset>
+      <h3 class="text-center mt-5">Login</h3>
     <form
       class="row d-flex justify-content-center"
       [formGroup]="loginForm"
