--- a/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
+++ b/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
@@ -1,8 +1,38 @@
 <div class="container">
   <div class="row justify-content-center">
-    <form class="col-6" [formGroup]="sequenceUploadForm" (ngSubmit)="uploadSequenceFiles()">
+    <form class="col-6" [formGroup]="sequenceManageForm">
       <fieldset>
-        <legend>Upload sequence files.</legend>
+
+        <div *ngIf="this.isModifyFileMode; else modifyLegend">
+          <div class="my-3">
+              <h3>Modify sequence file</h3>
+          </div>
+          <h4 *ngIf="this.modificationResult" class="success-msg">Successful update!</h4>
+          <h4 *ngIf="this.modificationResult === false" class="failed-msg">Failed to update!</h4>
+        </div>
+
+        <ng-template #modifyLegend>
+          <div class="my-3">
+            <h3>Upload sequence files</h3>
+          </div>
+        </ng-template>
+
+        <!-- FILE NAME -->
+        <div class="form-group">
+          <label for="exampleInputEmail1" class="form-label mt-3"
+            >File name</label
+          >
+          <input type="text" class="form-control" formControlName="fileName"/>
+          <span
+            class="text-danger"
+          *ngIf="this.sequenceManageForm.get('fileName')?.errors?.['required'] &&
+                             this.sequenceManageForm.get('fileName')?.touched"
+        >
+          File name field cannot be empty.
+        </span>
+        
+        </div>
+        <!-- END: FILE NAME -->
 
         <!-- TAX. ID -->
         <div class="form-group">
@@ -12,22 +42,22 @@
           <input type="number" class="form-control" formControlName="taxonomyID"/>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('taxonomyID')?.errors?.['required'] &&
-                             this.sequenceUploadForm.get('taxonomyID')?.touched"
+          *ngIf="this.sequenceManageForm.get('taxonomyID')?.errors?.['required'] &&
+                             this.sequenceManageForm.get('taxonomyID')?.touched"
         >
           Taxonomy ID field cannot be empty.
         </span>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('taxonomyID')?.errors?.['min'] &&
-                             this.sequenceUploadForm.get('taxonomyID')?.touched"
+          *ngIf="this.sequenceManageForm.get('taxonomyID')?.errors?.['min'] &&
+                             this.sequenceManageForm.get('taxonomyID')?.touched"
         >
           Taxonomy ID value cannot be less than 1.
         </span>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('taxonomyID')?.errors?.['max'] &&
-                             this.sequenceUploadForm.get('taxonomyID')?.touched"
+          *ngIf="this.sequenceManageForm.get('taxonomyID')?.errors?.['max'] &&
+                             this.sequenceManageForm.get('taxonomyID')?.touched"
         >
           Taxonomy ID value is too big.
         </span>
@@ -42,15 +72,15 @@
           <input type="text" class="form-control" formControlName="geneID"/>
           <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('geneID')?.errors?.['required'] &&
-                             this.sequenceUploadForm.get('geneID')?.touched"
+          *ngIf="this.sequenceManageForm.get('geneID')?.errors?.['required'] &&
+                             this.sequenceManageForm.get('geneID')?.touched"
         >
           Gene identifier field cannot be empty.
         </span>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('geneID')?.errors?.['maxlength'] &&
-                             this.sequenceUploadForm.get('geneID')?.touched"
+          *ngIf="this.sequenceManageForm.get('geneID')?.errors?.['maxlength'] &&
+                             this.sequenceManageForm.get('geneID')?.touched"
         >
           Gene identifier is too long.
         </span>
@@ -72,15 +102,15 @@
           </textarea>
           <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('description')?.errors?.['required'] &&
-                             this.sequenceUploadForm.get('description')?.touched"
+          *ngIf="this.sequenceManageForm.get('description')?.errors?.['required'] &&
+                             this.sequenceManageForm.get('description')?.touched"
         >
           Description field cannot be empty.
         </span>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('geneID')?.errors?.['maxlength'] &&
-                             this.sequenceUploadForm.get('geneID')?.touched"
+          *ngIf="this.sequenceManageForm.get('geneID')?.errors?.['maxlength'] &&
+                             this.sequenceManageForm.get('geneID')?.touched"
         >
           Description is too long.
         </span>
@@ -88,7 +118,7 @@
         <!-- END: DESCRIPTION -->
 
         <!-- FILE UPLOAD -->
-        <div class="form-group">
+        <div *ngIf="isModifyFileMode === false" class="form-group">
           <label for="formFile" class="form-label mt-4">Select files.</label>
           <input
             id="formFile"
@@ -100,15 +130,15 @@
           />
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('files')?.errors?.['required'] &&
-                             this.sequenceUploadForm.get('files')?.touched"
+          *ngIf="this.sequenceManageForm.get('files')?.errors?.['required'] &&
+                             this.sequenceManageForm.get('files')?.touched"
         >
           No files are selected.
         </span>
         <span
             class="text-danger"
-          *ngIf="this.sequenceUploadForm.get('files')?.errors?.['invalidFileExtension'] &&
-                             this.sequenceUploadForm.get('files')?.touched"
+          *ngIf="this.sequenceManageForm.get('files')?.errors?.['invalidFileExtension'] &&
+                             this.sequenceManageForm.get('files')?.touched"
         >
           The listed files contain invalid files.
           All files must be a valid sequence format. Such as, .fasta, .fastq, .gb, etc..
@@ -116,9 +146,16 @@
         </div>
         <!-- END: FILE UPLOAD -->
 
-        <button type="submit"
-            [disabled]="sequenceUploadForm.invalid"
-            class="btn btn-primary my-3">Upload</button>
+        <button *ngIf="isModifyFileMode" type="submit"
+            [disabled]="sequenceManageForm.invalid"
+            (click)="modifySequenceFiles()"
+            class="btn btn-primary my-3">Modify
+        </button>
+        <button *ngIf="isModifyFileMode === false" type="submit"
+            [disabled]="sequenceManageForm.invalid"
+            (click)="uploadSequenceFiles()"
+            class="btn btn-primary my-3">Upload
+        </button>
       </fieldset>
 
     <!-- Progress bars. -->
