--- a/app/SeqMine/src/app/components/header/header.component.html
+++ b/app/SeqMine/src/app/components/header/header.component.html
@@ -95,7 +95,7 @@
             >
           </div>
         </li>
-        <li class="nav-item">
+        <li *ngIf="!this.isLoggedIn" class="nav-item">
           <a
             class="nav-link"
             routerLink="/register"
