--- a/app/SeqMine/src/app/components/login/login.component.html
+++ b/app/SeqMine/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!this.isLoggedIn" class="container">
+<div class="container">
   <fieldset>
       <h3 class="text-center mt-5">Login</h3>
     <form
