--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -8,7 +8,27 @@
 
         <h3 *ngIf="getUserDeletionStatus()" class="text-center" id="success-deletion-message">User "{{ recentlyDeletedUser }}" has successfully been deleted. </h3>
         <h3 *ngIf="getUserDeletionStatus() === false" class="text-center" id="failed-deletion-message">Failed to delete "{{ recentlyDeletedUser }}".<br> Something went wrong.</h3>
-
+        <form [formGroup]="searchBarForm" class="d-flex my-3">
+            <div class="col-6 text-center form-group d-flex align-items-center">
+                <input
+                  id="login-username"
+                  type="text"
+                  formControlName="searchTerm"
+                  class="form-control"
+                  placeholder="Term to search .."
+                />
+            </div>
+            <div>
+              <button
+                class="btn btn-m btn-info btn-md mx-2"
+                type="button"
+                (click)="searchByTerm(this.searchBarForm.get('searchTerm')?.value)"
+              >
+                SEARCH
+              </button>
+            </div>
+        </form>
+        <pagination-controls (pageChange)="cp=$event"></pagination-controls>
         <table class="table table-hover">
           <thead>
             <tr>
@@ -24,7 +44,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let user of this.allUsersArr" scope="row">
+            <tr *ngFor="let user of this.usersToDisplay | paginate: { itemsPerPage: this.rowNumberLimit, currentPage: cp }" scope="row">
               <th scope="row">{{ user.id}}</th>
               <td>{{ user.username }}</td>
               <td>{{ user.role}}</td>
@@ -53,6 +73,7 @@
             </tr>
           </tbody>
         </table>
+        <pagination-controls (pageChange)="cp=$event"></pagination-controls>
     </div>
 </div>
 
